--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,21 +1,16 @@
-nav.main{
-  
+nav.main {
+   
     padding: 0 30px 30px 0;
-    
 }
 
-ul {
+.main ul {
     list-style-type: none;
-   
-    
-
 }
 
 nav.main a {
-
     display: block;
     text-decoration: none;
-    color:black;
+    color: black;
     text-transform: uppercase;
     font-weight: bold;
     padding: 10px;
@@ -23,25 +18,26 @@ nav.main a {
 }
 
 nav.main a:hover {
-    
-transform: translateX(20px);
+    transform: translateX(20px);
 }
 
-nav.main a.active { 
-border-left: 10px gray solid;
-transform: translateX(0px);
-
+nav.main a.active {
+    border-left: 10px gray solid;
+    transform: translateX(0);
 }
 
 nav.main li:nth-child(1) a.active {
     border-left-color: green;
 }
+
 nav.main li:nth-child(2) a.active {
     border-left-color: blue;
 }
+
 nav.main li:nth-child(3) a.active {
-    border-left-color: red;
-}
-nav.main li:nth-child(4) a.active {
     border-left-color: orange;
+}
+
+nav.main li:nth-child(4) a.active {
+    border-left-color: red;
 }
