--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,13 +4,14 @@ div.app {
   min-height: 100vh;
   width: 90%;
   margin: 0 auto;
-  background-color: white;
+  background-color: #ddd;
   color:#222;
   text-decoration: none;
   list-style-type: none;
 }
 
 header {
+  margin-top: 10px;
   flex-basis: 30vh;
   background-color: #fff;
 }
